<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    app:layoutDescription="@xml/activity_main_scene"
    android:background="@drawable/ramdanbg"
    >
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/helal1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/ramdan"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />

    <TextView
        android:id="@+id/ahln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_extrabold"
        android:gravity="center"
        android:text="@string/ahln"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helal1" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iftar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/ahln"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/iftar2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/UP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/prayTime"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:textColor="@color/purple_700"
        android:fontFamily="@font/cairo_medium"
        />
    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/history"
        android:textSize="30sp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/prayTime"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title"
        android:drawableStart="@drawable/pray"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/cairo_medium"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iftar2"
        android:layout_width="300dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/Title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/pray"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:adjustViewBounds="true"
        android:layout_marginTop="8dp"
        />
    <FrameLayout
        android:id="@+id/prayTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ramadanup"
        app:layout_constraintTop_toBottomOf="@id/iftar2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/cairo_semibold"
                    android:padding="2dp"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    android:text="4:39"
                    />
                <TextView
                    android:id="@+id/fgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:text="الفجر :"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/timeZohr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    android:text="12:10"
                    />
                <TextView
                    android:id="@+id/zohr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/cairo_semibold"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:text="@string/zohr"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:fontFamily="@font/cairo_semibold"
                    android:id="@+id/timeAsr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    android:text="3:38"
                    />
                <TextView
                    android:fontFamily="@font/cairo_semibold"
                    android:id="@+id/asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:text="@string/ASR"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:fontFamily="@font/cairo_semibold"
                    android:id="@+id/timeM8rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    android:text="6:15"
                    />
                <TextView
                    android:fontFamily="@font/cairo_semibold"
                    android:id="@+id/m8rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:text="@string/m8rb"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:fontFamily="@font/cairo_semibold"
                    android:id="@+id/timeAsha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    android:text="7:45"
                    />
                <TextView
                    android:fontFamily="@font/cairo_semibold"
                    android:id="@+id/asha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:padding="2dp"
                    android:text="@string/asha"
                    android:textColor="#595656"
                    android:textSize="20sp"
                    />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>